# comfyUI-flow-task

./: .gitignore  IFRAME_INTEGRATION.md  README.md  deploy.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_subtask_generated_images.py  0003_add_workflow_json.py  0004_add_task_execution_state_column.py  0005_add_cancelled_task_status.py  0006_workflow_filename.py  0007_ensure_task_status_values.py  0008_add_comfyui_settings_table.py  0009_add_task_schedule_columns.py  0010_add_task_schedule_at_column.py
backend/app/: main.py
backend/app/api/v1/: auth.py  callbacks.py  execution.py  router.py  settings.py  subtasks.py  task_templates.py  tasks.py  uploads.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  comfyui_setting.py  enums.py  generated_image.py  generated_video.py  photo.py  subtask.py  task.py  task_template.py
backend/app/schemas/: auth.py  settings.py  task.py  upload.py
backend/app/services/: comfyui_service.py  comfyui_settings_service.py  status.py  task_scheduler_service.py  task_service.py  template_service.py  upload_service.py
deploy/systemd/: flow-task-web.service  flow-task.service
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  execution.js  http.js  settings.js  tasks.js  templates.js
frontend/src/components/: AppHeader.vue  (+5 more)
(+22 files in other folders)
